--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node dist/index.js"
+      "build:lib": "vite build",
+      "build:node": "tsc",
+      "build:dist": "cp src/speedtest.html dist/speedtest.html",
+      "build": "npm run build:lib && npm run build:node && npm run build:dist",
+      "start": "node dist/index.js"
+
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,8 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "@cloudflare/speedtest": "^1.4.1"
+    "@cloudflare/speedtest": "^1.4.1",
+    "puppeteer": "^24.3.0",
+    "vite": "^6.2.2"
   }
 }
