--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "build:lib": "vite build",
-      "build:node": "tsc",
-      "build:dist": "cp src/speedtest.html dist/speedtest.html",
-      "build": "npm run build:lib && npm run build:node && npm run build:dist",
-      "start": "node dist/index.js"
-
+    "build:lib": "vite build",
+    "build:node": "tsc",
+    "build:dist": "cp src/speedtest.html dist/speedtest.html",
+    "build": "npm run build:lib && npm run build:node && npm run build:dist",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,7 @@
   },
   "dependencies": {
     "@cloudflare/speedtest": "^1.4.1",
+    "influx": "^5.10.0",
     "puppeteer": "^24.3.0",
     "vite": "^6.2.2"
   }
